--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+
+<!DOCTYPE html>
+<html lang="en">
+ 
+ <h1><a href="http://deshui.wang">The domain changed to http://deshui.wang</h1>
+
+</html>
 <script>
  window.location.href="http://deshui.wang"
 </script>
+
